--- a/DullBERT.ipynb
+++ b/DullBERT.ipynb
@@ -180,7 +180,7 @@
     "#f1 = open(\"data/hello_world.txt\", \"r\")\n",
     "#text = \"dummy. \" + f1.read()\n",
     "#text = ''\n",
-    "text = \"How are you planning to go the college today?\"\n",
+    "#text = \"How are you planning to go the college today?\"\n",
     "#text = \"dummy. \" + \"I am in the college.\"\n",
     "#text = \"dummy. \" + \"How are you?\"\n",
     "#tokenised_text = tokeniser.tokenize(text)\n",
@@ -210,7 +210,7 @@
     "\n",
     "file1 = open(r\"synthetic_data_MURALI.txt\",\"a\")\n",
     "\n",
-    "for k in range(1):\n",
+    "for k in range(1):   #change the range to get more data points\n",
     "    generated_lines = []\n",
     "    final_generated_lines = []\n",
     "    for i in range((k*10),(k*10) + 10):\n",
